src/styles/global.css
@import "tailwindcss";

@source inline("rotate-{50,100,150,200,250,300,350}");

@theme {
  --breakpoint-xs: 25rem;
  --breakpoint-3xl: 120rem;
  --breakpoint-4xl: 160rem;

  --color-blue: #2187FF;
  --color-yellow: #E5FF53;
  --color-code-dark-grey: #556362;
  --color-code-fuscia: #D33681;
  --color-code-grey: #81917A;
  --color-code-orange: #FFCC2E;
  --color-code-teal: #2AA197;
  --color-code-teal-dark: #002B36;
  --color-code-teal-very-dark: #00141A;
  --color-var-color: var(--color);

  --font-sans: "Sofia Sans", ui-sans-serif, system-ui, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
  --font-mono: "JetBrains Mono", ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono", "Courier New", monospace;
}

:root {
  --color-yellow: #E5FF53;

  scroll-behavior: smooth;
}

p > code {
  font-weight: bold;
  font-size: 0.9em;
  background: #000;
  color: white;
  padding: 0 0.2em;
}

@layer utilities {

  .link {
    font-weight: 700;
    text-decoration: underline;
    text-decoration-thickness: 0.15em;
  }
  .link:focus-visible {
    text-decoration: none;
    outline: 0.15em solid;
    outline-offset: 0.15em;
  }

  .tab-focus:focus-visible {
    outline: 0.25em solid black;
    background: black;
    color: white;
  }
}

